# ros_speech2text

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  GCloud_SpeechAPI_Cred  README.md  package.xml  ros_publish.py  ros_speech2text_node.py  setup.py  transcribe_streaming.py
launch/: audio_play.launch  audio_read.launch  audio_save.launch  device.launch  main.launch  mic_capture.launch  ros_speech2text.launch  ros_speech2text_2mics.launch  ros_speech2text_3mics.launch  ros_speech2text_4mics.launch  ros_speech2text_async.launch  ros_speech2text_async2.launch  ros_speech2text_async3.launch  speech_recognize.launch  utterance_detect.launch  utterance_save.launch
msg/: AudioChunk.msg  AudioConfigM.msg  EndUtterance.msg  StartUtterance.msg  Transcript.msg  Utterance.msg  UtteranceChunk.msg  event.msg  start_utterance.msg  transcript.msg
ros_s2t/: scripts  setup.py
ros_s2t/include/ros_s2t/: util.py
ros_s2t/launch/: s2t_basic.launch
ros_s2t/scripts/: s2t_node.py
ros_s2t/src/: ros_talker.py
ros_speech2text/: CMakeLists.txt  package.xml
ros_speech2text/launch/: ros_speech2text.launch  ros_speech2text_async.launch  ros_speech2text_sync.launch
ros_speech2text/scripts/: ros_speech2text.py  ros_speech2text_async.py
s2t/: __init__.py  py23.py  speech_detection.py  speech_recognition.py  test_speech.py
scripts/: audio_play.py  audio_read.py  audio_save.py  buffers.py  listening_to_display.py  mic_capture.py  ros_s2t.py  ros_speech2text.py  ros_speech2text_async.py  s2t.py  semaphore.py  speech_recognize.py  utilities.py  utterance_detect.py  utterance_detector.py  utterance_save.py
src/ros_speech2text/: speech_detection.py  speech_recognition.py
src/s2t/: speech_recognition.py
srv/: AudioConfig.srv
team_meeting_project/: CMakeLists.txt  package.xml  ros-speech2text-google-stt-cred
team_meeting_project/launch/: send_speech_to_local.launch  send_speech_to_tablet.launch
team_meeting_project/scripts/: send_speech.py  send_speech_to_tablet.py
test/: test_ros_speech2text.test  test_s2t.test  test_speech_api.py  test_speech_detection.py
test_script/: client_test.py  notes.txt  pyaudio_record.py  record_speech_segmentation.py  ros_speech2text_node.py  ros_speech2text_noncontinuous.py  ros_speech2text_sync.py  transcribe_streaming.py
