<package format="2">
  <name>ros_speech2text</name>
  <version>2.0.0</version>
  <description>The ros_speech2text package</description>
  <license>LGPLv2.1</license>
  <url type="website">https://github.com/scazlab/ros_speech2text</url>

  <maintainer email="ken.cheng@yale.edu">Ken Cheng</maintainer>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python-pyaudio</depend>

  <build_depend>rostest</build_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
