<?xml version="1.0"?>
<package format="2">
  <name>team_meeting_project</name>
  <version>0.0.0</version>
  <description>The team_meeting_project package</description>
  <author email="sarah.sebo@yale.edu">Sarah Sebo</author>
  <maintainer email="sarah.sebo@yale.edu">scazlab</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>ros_speech2text</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
